  * really updated dparser to a6207d6db5e54c68aa4b9db53b702681242d81d5
  * goto definition on import now supports package.d
  * bugzilla 13759: $(VSINSTALLDIR)\Common7\IDE now added to the default executable paths
  * build phobos browse info: operated on outdated folder structure of phobos/druntime
  * DMD/x64 linker override settings not saved
  * revamped pipedmd: now uses tracker.exe from MSBuild or WinSDK to monitor dependencies
  * Win32/COFF support: check box on Compiler->Output page, new tab in global options
  * bugzilla 13817: VisualD cannot list members with utf-8 wide characters
  * bugzilla 13342: mixin error message now interpreted
  * when running/unittesting from within visuald, exception/callstack locations can be jumped to
  * bugzilla 13213: there are now both "goto definition" and "goto declaration", where the former
    will try to find the forward declared symbols through the object browser (including C/C++)
  * object browser/symbol search: now filters out __unittest and __invariant symbols
  * cv2pdb: updated to 0.33 with better DWARF location support

unreleased Version 0.3.41

  * mago:
    - module list now shows x64 addresses correctly
    - verboser output for DLL load/unload
    - implement "set next statement"
    - callstack: parameter list also showed locals
    - disassembly: show symbols, address labels
    - fix dstring display
    - can list associative array members (needs 
      https://github.com/D-Programming-Language/dmd/pull/4473 for Win64)
    - show exception number for Win32 exceptions
    - can now load PDB symbols from Microsoft Symbol Server or local 
      cache folders
  * cv2pdb:
    - improvements for DWARF conversion
  * dparser updated to cf26dbe426b10957f6364313cc7121e41083bebe with support for new 
    language features in dmd 2.067
  * some initial support for finding symbol references
  * new option "build and use local phobos library" to get a COFF32 version or add 
    missing debug info