@@ -712,10 +712,15 @@ unreleased Version 0.3.41
     - show exception number for Win32 exceptions
     - can now load PDB symbols from Microsoft Symbol Server or local 
       cache folders
+    - now support lexical scope blocks (helps C++ and D with
+      https://github.com/D-Programming-Language/dmd/pull/2867)
   * cv2pdb:
     - improvements for DWARF conversion
   * dparser updated to cf26dbe426b10957f6364313cc7121e41083bebe with support for new 
     language features in dmd 2.067
   * some initial support for finding symbol references
-  * new option "build and use local phobos library" to get a COFF32 version or add 
-    missing debug info
+  * new linker option "build and use local phobos library" to get a COFF32 version (dmd 2.067+)
+    or add missing debug info (dmd 2.065+)
+  * renaming project configuration did not change respective config on all platforms 
+  * workaround for link response file with spaces, but disabled short names on NTFS volume
+  * profiler window: non-D symbols (e.g. C++ mangled functions) are no longer displayed empty
